Colab을 통해 생성됨

--- a/5_regularexpression.ipynb
+++ b/5_regularexpression.ipynb
@@ -2338,6 +2338,39 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The color can be either red, green, or blue.\"\n",
+        "\n",
+        "pattern = r\"(red|blue)\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pVEOZ_ff5yO0",
+        "outputId": "1b4ba64f-b533-4b4f-c537-2a175bd9a842"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: red\n",
+            "Match: blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#17. |  (뜻: or 와 일치) 예시 [Get students' script modified in line 5 ('red or blue' to 'red, green, or blue) & line 6 'either red|blue' to '(red|blue)' in line]\n",
         "\n",
         "import re\n",
@@ -2365,6 +2398,46 @@
           "text": [
             "Match: red\n",
             "Match: blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"It cost me $715.45 and more.\"\n",
+        "\n",
+        "pattern1 = r\"more.$\"\n",
+        "\n",
+        "matches1 = re.findall(pattern1, text)\n",
+        "\n",
+        "for i in matches1:\n",
+        "  print(\"Match1:\", i)\n",
+        "\n",
+        "pattern2 = r\"\\$*7\"\n",
+        "\n",
+        "matches2 = re.findall(pattern2, text)\n",
+        "\n",
+        "for i in matches2:\n",
+        "  print(\"Match2\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q2_MBKlc6Qlb",
+        "outputId": "1b59e6c3-ec18-4d1a-c396-a4ab3f7f6690"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match1: more.\n",
+            "Match2 $7\n"
           ]
         }
       ]
@@ -2492,6 +2565,67 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello, world.\\n This is test #5.\"\n",
+        "\n",
+        "pattern = r\".\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d4GRp_Fx9ohT",
+        "outputId": "8678265f-22d2-45fc-ceef-38384c3f141b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: H\n",
+            "Match: e\n",
+            "Match: l\n",
+            "Match: l\n",
+            "Match: o\n",
+            "Match: ,\n",
+            "Match:  \n",
+            "Match: w\n",
+            "Match: o\n",
+            "Match: r\n",
+            "Match: l\n",
+            "Match: d\n",
+            "Match: .\n",
+            "Match:  \n",
+            "Match: T\n",
+            "Match: h\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: t\n",
+            "Match: e\n",
+            "Match: s\n",
+            "Match: t\n",
+            "Match:  \n",
+            "Match: #\n",
+            "Match: 5\n",
+            "Match: .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#19.a 💣💊 COMPARE. The following example is more advanced from #1.\n",
         "\n",
         "import re\n",
@@ -2549,6 +2683,40 @@
             "Match: #\n",
             "Match: 5\n",
             "Match: .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"\\d\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VL6EJjYt-D9K",
+        "outputId": "dc08d0cc-3d24-4a1a-d418-f86424d2f113"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
           ]
         }
       ]
@@ -2624,6 +2792,59 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text1 = \"The price is $100 and the number pi is approximately 3.14.\"\n",
+        "\n",
+        "pattern1 = r\"\\d+\"\n",
+        "\n",
+        "text2 = \"The number pi is approximately 3.14159265358979323846 and you will hear a lot about it in Math class from 1st Grade to the 12th Grade.\"\n",
+        "\n",
+        "pattern2 = r\"\\d+\\.\\d+\"\n",
+        "\n",
+        "matches1 = re.findall(pattern1, text1)\n",
+        "matches2 = re.findall(pattern2, text2)\n",
+        "\n",
+        "print(matches1)\n",
+        "\n",
+        "for i in matches1:\n",
+        "  print(\"Match:\", i)\n",
+        "\n",
+        "print('\\n')\n",
+        "\n",
+        "print(matches2)\n",
+        "\n",
+        "for i in matches2:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fGDXhcOQ-kmy",
+        "outputId": "d8040e9d-be01-4f5c-b2bc-cd1cdff1ad41"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['100', '3', '14']\n",
+            "Match: 100\n",
+            "Match: 3\n",
+            "Match: 14\n",
+            "\n",
+            "\n",
+            "['3.14159265358979323846']\n",
+            "Match: 3.14159265358979323846\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#21a 💣💊COMPARE\n",
         "\n",
         "#cf., 💊 만약 \"100\"이라는 문자열 전체에 대한 하나의 일치를 원한다면 r\"\\d+\"와 같이 + 메타 문자(meta character +)를 사용하여 숫자가 <하나 이상> 연속해서 일치하도록 패턴을 지정해야 함.\n",
@@ -2678,6 +2899,55 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "\n",
+        "pattern = r\"\\D\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mHFslFfWBIzC",
+        "outputId": "f526656e-d5e7-40c4-f7c5-534c1f064223"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['T', 'h', 'e', ' ', 'p', 'r', 'i', 'c', 'e', ' ', 'i', 's', ' ', '$', '.']\n",
+            "Match: T\n",
+            "Match: h\n",
+            "Match: e\n",
+            "Match:  \n",
+            "Match: p\n",
+            "Match: r\n",
+            "Match: i\n",
+            "Match: c\n",
+            "Match: e\n",
+            "Match:  \n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: $\n",
+            "Match: .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 22. \\D 예시\n",
         "\n",
         "import re\n",
@@ -2720,6 +2990,43 @@
             "Match:  \n",
             "Match: $\n",
             "Match: .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello   World\"\n",
+        "\n",
+        "pattern = r\"\\s\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for match in matches:\n",
+        "  print(\"Match:\", match)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JGWvo9fvBurR",
+        "outputId": "6865690a-5458-46e2-9e99-b0c8cbe812c3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[' ', ' ', ' ']\n",
+            "Match:  \n",
+            "Match:  \n",
+            "Match:  \n"
           ]
         }
       ]
@@ -2807,6 +3114,57 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is _awesome_!\"\n",
+        "\n",
+        "pattern = r\"\\w\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for match in matches:\n",
+        "  print(\"Match:\", match)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tGknJZkbCLUB",
+        "outputId": "08f0886d-68c8-4cb5-e81c-5578a43e8a9d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['P', 'y', 't', 'h', 'o', 'n', 'i', 's', '_', 'a', 'w', 'e', 's', 'o', 'm', 'e', '_']\n",
+            "Match: P\n",
+            "Match: y\n",
+            "Match: t\n",
+            "Match: h\n",
+            "Match: o\n",
+            "Match: n\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match: _\n",
+            "Match: a\n",
+            "Match: w\n",
+            "Match: e\n",
+            "Match: s\n",
+            "Match: o\n",
+            "Match: m\n",
+            "Match: e\n",
+            "Match: _\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#25. \\w 예시\n",
         "import re\n",
         "\n",
@@ -2857,6 +3215,43 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is awesome!\"\n",
+        "\n",
+        "pattern = r\"\\w+\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nnScAfd9Dukh",
+        "outputId": "d0c83be7-ad34-40d9-9809-7a7fdc4f1fef"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Python', 'is', 'awesome']\n",
+            "Match: Python\n",
+            "Match: is\n",
+            "Match: awesome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#26. \\w+ 예시\n",
         "\n",
         "import re\n",
@@ -2894,6 +3289,42 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 Main Street and 5 Avnue \"\n",
+        "\n",
+        "pattern = r\"\\d\\s\\w+\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0JoB-WNkE5xa",
+        "outputId": "f5ed72f0-26e5-4949-ece8-c288d60f0d80"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['3 Main', '5 Avnue']\n",
+            "Match: 3 Main\n",
+            "Match: 5 Avnue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#27. 백슬래시를 사용하여 특수한 문자 클래스를 생성할 수 있음. 예를 들어, \\d는 숫자를 매치하고, \\s는 공백 문자를 매치, \\w+는 하나 이상의 alphnumeric character including underscores\n",
         "\n",
         "import re\n",
@@ -2922,6 +3353,42 @@
           "text": [
             "['3 Main', '5 Avenue']\n",
             "Match: 3 Main\n",
+            "Match: 5 Avenue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 Main Street and 5 Avenue \"\n",
+        "\n",
+        "pattern = r\"\\d+\\s\\w+\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "print(matches)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DItdqqlfFTFy",
+        "outputId": "812ca95d-d097-42e2-cd61-6a9573ad2f6f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['123 Main', '5 Avenue']\n",
+            "Match: 123 Main\n",
             "Match: 5 Avenue\n"
           ]
         }
@@ -2984,7 +3451,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fCBZj9n06MYZ",
-        "outputId": "6e0c62eb-a025-4255-b466-617e075622e7"
+        "outputId": "ad018695-1d59-442a-8ad2-b4da6dc7002b"
       },
       "execution_count": null,
       "outputs": [
@@ -2992,6 +3459,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['3 _Main_']\n",
             "Match: 3 _Main_\n"
           ]
         }
@@ -3015,7 +3483,7 @@
       ],
       "metadata": {
         "id": "Yp1e1EA6wYST",
-        "outputId": "bbc268e5-8dc9-4581-d990-859f944ed76e",
+        "outputId": "7f6a2b4c-1555-45f9-e295-bf98c57d1ce1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
