Colab을 통해 생성됨

--- a/6_definingfunctions.ipynb
+++ b/6_definingfunctions.ipynb
@@ -1070,6 +1070,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def func_uncertain(*args):\n",
+        "  print(args)\n",
+        "\n",
+        "func_uncertain()\n",
+        "\n",
+        "func_uncertain(1, 2, 3)\n",
+        "func_uncertain('apple', 'banana', 'cherry', 'date')\n",
+        "func_uncertain(True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ci3TM3xj8p_5",
+        "outputId": "28f6ef55-4c42-4293-ff27-fa739f669fff"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "()\n",
+            "(1, 2, 3)\n",
+            "('apple', 'banana', 'cherry', 'date')\n",
+            "(True,)\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##💡 'True' is a boolean value in Python, representing the logical value of true.\n",
@@ -1121,6 +1154,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def func_kwa(width, height, **kwargs):\n",
+        "  print(kwargs)\n",
+        "\n",
+        "func_kwa(10, 20)\n",
+        "func_kwa(10, 20, depth=30, color='bule')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W6TTpQI499rJ",
+        "outputId": "5142e9af-749b-4256-d827-378675bb6a12"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n",
+            "{'depth': 30, 'color': 'bule'}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "💊 *kwargs vs. positional arguments\n",
@@ -1167,6 +1228,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def func_kwa(width, height, **kwargs):\n",
+        "  print(\"width:\", width)\n",
+        "  print(\"Height:\", height)\n",
+        "  print(\"Additional keyword argumnts:\", kwargs)\n",
+        "\n",
+        "func_kwa(10, 20, depth=30, color='bule')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AwdCl7MP_0cv",
+        "outputId": "97e4ce34-4109-4cb5-9759-7f7cda19d8e2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "width: 10\n",
+            "Height: 20\n",
+            "Additional keyword argumnts: {'depth': 30, 'color': 'bule'}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#####  🌀 리스트의 요소 중 하나가 function 함수인 경우"
@@ -1193,6 +1284,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "Hello World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def myfunction():\n",
+        "  print('Hello World!')\n",
+        "\n",
+        "list = [1, 2, myfunction]\n",
+        "\n",
+        "myfunction()\n",
+        "list[2]()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BIl018olAa69",
+        "outputId": "b98480f4-889d-4f3e-b80d-64167e186d05"
       },
       "execution_count": null,
       "outputs": [
