Colab을 통해 생성됨

--- a/7_class_method_member_object.ipynb
+++ b/7_class_method_member_object.ipynb
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jTzt5_icHkAo",
-        "outputId": "351cfaf3-a6d1-4067-a232-c9c14dced929"
+        "outputId": "048dd38d-98fa-4a47-9710-1f4c0e65db1f"
       },
       "execution_count": null,
       "outputs": [
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 16
         }
       ]
     },
@@ -519,7 +519,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sqjip_u5JlBh",
-        "outputId": "22bd2ef5-68d7-4932-c61c-8b9061efb586"
+        "outputId": "870e3b3d-0e59-4ebc-ae8e-cc69659cfed4"
       },
       "execution_count": null,
       "outputs": [
@@ -531,7 +531,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 6
         }
       ]
     },
@@ -571,7 +571,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0CepInhpJmyJ",
-        "outputId": "ee0fd1cd-a255-4ea5-d812-1cb3048daebb"
+        "outputId": "2a43ed6d-0b0d-4b1f-cb05-2c49e040129e"
       },
       "execution_count": null,
       "outputs": [
@@ -583,7 +583,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 7
         }
       ]
     },
@@ -623,7 +623,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RLIvLrcBJpEx",
-        "outputId": "4743c0d7-8b3b-4d55-f43d-c6f9c84a3764"
+        "outputId": "4fe8f522-1e94-4468-b884-d9e4061634ac"
       },
       "execution_count": null,
       "outputs": [
@@ -635,7 +635,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 8
         }
       ]
     },
@@ -675,7 +675,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SjxjmH6UJrgB",
-        "outputId": "1c675ef7-5ada-4b62-c7ae-21b972ef690f"
+        "outputId": "703acd69-79c7-41ba-ecdc-01f9c2b0943d"
       },
       "execution_count": null,
       "outputs": [
@@ -687,7 +687,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 9
         }
       ]
     },
@@ -727,7 +727,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wEK6c217JuPL",
-        "outputId": "ab90ff76-94ad-463e-fb9a-642e670377ac"
+        "outputId": "8a03a9e5-40b6-402a-8113-9c3abd14d46a"
       },
       "execution_count": null,
       "outputs": [
@@ -739,7 +739,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 10
         }
       ]
     },
@@ -779,7 +779,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JyeDg5VuJwjZ",
-        "outputId": "927ebb24-de27-415d-c12b-99099a8a88b3"
+        "outputId": "c9ea7ea3-d343-4c8c-be55-1cb9be9d501d"
       },
       "execution_count": null,
       "outputs": [
@@ -791,7 +791,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 11
         }
       ]
     },
@@ -831,7 +831,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UsGy6uJDJzaJ",
-        "outputId": "fe389d7c-58f9-4b24-d7a1-31b84e71fb84"
+        "outputId": "70a02e04-1ba6-43fb-f5ec-71e20930cf4b"
       },
       "execution_count": null,
       "outputs": [
@@ -843,7 +843,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 12
         }
       ]
     },
@@ -883,7 +883,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYf4jJqtJ1og",
-        "outputId": "927deab4-326d-4dae-f9d8-41f4a78b8540"
+        "outputId": "606cc1e1-4ee7-4fe4-e0a5-c0d251dc733f"
       },
       "execution_count": null,
       "outputs": [
@@ -895,7 +895,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 13
         }
       ]
     },
@@ -935,7 +935,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D-msN_r3J4fZ",
-        "outputId": "20227895-2c96-436e-e509-cf13ae337ebe"
+        "outputId": "a6612c82-6c86-458b-feac-8b3aacd72f16"
       },
       "execution_count": null,
       "outputs": [
@@ -947,7 +947,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 14
         }
       ]
     },
@@ -988,7 +988,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "af9UTQDUJ61Z",
-        "outputId": "c7b7d6ac-a601-4adc-d69b-7e627f0d143b"
+        "outputId": "aa19a286-49c1-4642-e223-4c82b6af9041"
       },
       "execution_count": null,
       "outputs": [
@@ -1028,6 +1028,26 @@
       ],
       "metadata": {
         "id": "2JusDACEqatM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MoreFourCal:\n",
+        "  def setdata(self, first, second):\n",
+        "    self.first = first\n",
+        "    self.second = second\n",
+        "\n",
+        "  def pow(self):\n",
+        "    result = self.first ** self.second\n",
+        "    return result\n",
+        "\n",
+        "a = MoreFourCal()"
+      ],
+      "metadata": {
+        "id": "uwAETtZLCJrC"
       },
       "execution_count": null,
       "outputs": []
@@ -1115,6 +1135,21 @@
     {
       "cell_type": "code",
       "source": [
+        "class Family:\n",
+        "  lastname = 'Chandler'\n",
+        "\n",
+        "a = Family()\n",
+        "b = Family()"
+      ],
+      "metadata": {
+        "id": "hxcfszrDDG5y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "a.lastname #클래스변수는 클래스이름.클래스변수로 사용\n"
       ],
       "metadata": {
@@ -1139,6 +1174,36 @@
           },
           "metadata": {},
           "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.lastname"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ZLouEIlKDWHB",
+        "outputId": "1022aced-b9f5-4d8c-b5e6-7a63784bee06"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chandler'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     },
@@ -1175,10 +1240,51 @@
     {
       "cell_type": "code",
       "source": [
+        "b.lastname"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "au7QdQdMDZfq",
+        "outputId": "572ab640-b0e6-4325-e035-afc9a3a5d19e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chandler'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "Family.lastname = 'Poppins' #Family클래스의 lastname클래스변수에 Poppins 할당"
       ],
       "metadata": {
         "id": "n53JOjEjwfe2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Family.lastname = 'Poppins'"
+      ],
+      "metadata": {
+        "id": "SWk9jANRDc46"
       },
       "execution_count": null,
       "outputs": []
@@ -1216,6 +1322,36 @@
     {
       "cell_type": "code",
       "source": [
+        "a.lastname"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "qqldMz_dDhuZ",
+        "outputId": "f8bdf8d6-8c05-4d77-f548-923f0fdb19da"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Poppins'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "b.lastname"
       ],
       "metadata": {
@@ -1240,6 +1376,36 @@
           },
           "metadata": {},
           "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b.lastname"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "w44fFV9pDkBZ",
+        "outputId": "bda86359-13bd-4bdb-c6b8-7bd7e2b93236"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Poppins'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
@@ -1289,6 +1455,40 @@
     {
       "cell_type": "code",
       "source": [
+        "class Greetings:\n",
+        "  def sayHello(self):\n",
+        "    print('How are you?')\n",
+        "\n",
+        "  def sayBye(self,name):\n",
+        "    print('%s, see you!' %name)\n",
+        "\n",
+        "obj = Greetings()\n",
+        "\n",
+        "obj.sayHello()\n",
+        "obj.sayBye('Emma')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MPB66xr3DoIJ",
+        "outputId": "8d26557e-1491-4d49-c384-4f019366cb51"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How are you?\n",
+            "Emma, see you!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Caculator.py\n",
         "\n",
         "result = 0 #global variable named result and assigns it the value 0\n",
@@ -1308,6 +1508,39 @@
         },
         "id": "veFGBxXx_eQp",
         "outputId": "ef804dd0-48b5-4b1e-abef-9c6fb8ceaa10"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "7\n",
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = 0\n",
+        "def add(num):\n",
+        "  global result\n",
+        "  result += num\n",
+        "  return result\n",
+        "\n",
+        "print(add(3))\n",
+        "print(add(4))\n",
+        "print(add(5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BICrKVkgEMQR",
+        "outputId": "9704f8a0-6776-428a-961f-ea735d798946"
       },
       "execution_count": null,
       "outputs": [
@@ -1370,6 +1603,50 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "class Calculator:\n",
+        "    def initialize(self):\n",
+        "        self.result = 0\n",
+        "\n",
+        "    def add(self, num):\n",
+        "        self.result += num\n",
+        "        return self.result\n",
+        "\n",
+        "    def sub(self, num):\n",
+        "        self.result -= num\n",
+        "        return self.result\n",
+        "\n",
+        "calc = Calculator()\n",
+        "\n",
+        "calc.initialize()\n",
+        "\n",
+        "result_add = calc.add(8)\n",
+        "result_sub = calc.sub(3)\n",
+        "\n",
+        "print(result_add)\n",
+        "print(result_sub)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ZqpmupcG1Zw",
+        "outputId": "e6426fe2-65af-43ad-f6e8-bf9470847bfe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### ⤵️ **Function as a argument**\n",
@@ -1414,6 +1691,51 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "5\n",
+            "15\n",
+            "-10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Calculator:\n",
+        "  def initialize(self):\n",
+        "    self.result = 0\n",
+        "\n",
+        "  def add(self, num):\n",
+        "    self.result += num\n",
+        "    return self.result\n",
+        "\n",
+        "  def sub(self, num):\n",
+        "    self.result -= num\n",
+        "    return self.result\n",
+        "\n",
+        "calc = Calculator()\n",
+        "\n",
+        "calc.initialize()\n",
+        "\n",
+        "print(calc.add(8))\n",
+        "print(calc.sub(3))\n",
+        "print(calc.add(10))\n",
+        "print(calc.sub(25))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FTaJ0wpsH8P4",
+        "outputId": "23d3e498-91a6-4a66-938f-1ba9f4e88a35"
       },
       "execution_count": null,
       "outputs": [
