--- a/8_readtxtfilesimportingfrom_html.ipynb
+++ b/8_readtxtfilesimportingfrom_html.ipynb
@@ -986,7 +986,7 @@
     {
       "cell_type": "code",
       "source": [
-        "txt = \"\"\"\n",
+        "txt= \"\"\"\n",
         "Alice was beginning to get very tired of sitting by her sister on the\n",
         "bank, and of having nothing to do: once or twice she had peeped into\n",
         "the book her sister was reading, but it had no pictures or\n",
@@ -1048,6 +1048,135 @@
         },
         "id": "s1xxWG8FvrsQ",
         "outputId": "18643e14-1532-4490-c94d-24ae6264b01d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Alice was beginning to get very tired of sitting by her sister on the\n",
+            "bank, and of having nothing to do: once or twice she had peeped into\n",
+            "the book her sister was reading, but it had no pictures or\n",
+            "conversations in it, “and what is the use of a book,” thought Alice\n",
+            "“without pictures or conversations?”\n",
+            "\n",
+            "So she was considering in her own mind (as well as she could, for the\n",
+            "hot day made her feel very sleepy and stupid), whether the pleasure of\n",
+            "making a daisy-chain would be worth the trouble of getting up and\n",
+            "picking the daisies, when suddenly a White Rabbit with pink eyes ran\n",
+            "close by her.\n",
+            "\n",
+            "There was nothing so very remarkable in that; nor did Alice think it\n",
+            "so _very_ much out of the way to hear the Rabbit say to itself, “Oh\n",
+            "dear! Oh dear! I shall be late!” (when she thought it over afterwards,\n",
+            "it occurred to her that she ought to have wondered at this, but at the\n",
+            "time it all seemed quite natural); but when the Rabbit actually took a\n",
+            "watch out of its waistcoat-pocket, and looked at it, and then hurried\n",
+            "on, Alice started to her feet, for it flashed across her mind that she\n",
+            "had never before seen a rabbit with either a waistcoat-pocket, or a\n",
+            "watch to take out of it, and burning with curiosity, she ran across the\n",
+            "field after it, and fortunately was just in time to see it pop down a\n",
+            "large rabbit-hole under the hedge.\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "Alice was beginning to get very tired of sitting by her sister on the\n",
+            "bank, and of having nothing to do: once or twice she had peeped into\n",
+            "the book her sister was reading, but it had no pictures or\n",
+            "conversations in it, “and what is the use of a book,” thought Alice\n",
+            "“without pictures or conversations?”\n",
+            "\n",
+            "So she was considering in her own mind (as well as she could, for the\n",
+            "hot day made her feel very sleepy and stupid), whether the pleasure of\n",
+            "making a daisy-chain would be worth the trouble of getting up and\n",
+            "picking the daisies, when suddenly a White Rabbit with pink eyes ran\n",
+            "close by her.\n",
+            "\n",
+            "There was nothing so very remarkable in that; nor did Alice think it\n",
+            "so _very_ much out of the way to hear the Rabbit say to itself, “Oh\n",
+            "dear! Oh dear! I shall be late!” (when she thought it over afterwards,\n",
+            "it occurred to her that she ought to have wondered at this, but at the\n",
+            "time it all seemed quite natural); but when the Rabbit actually took a\n",
+            "watch out of its waistcoat-pocket, and looked at it, and then hurried\n",
+            "on, Alice started to her feet, for it flashed across her mind that she\n",
+            "had never before seen a rabbit with either a waistcoat-pocket, or a\n",
+            "watch to take out of it, and burning with curiosity, she ran across the\n",
+            "field after it, and fortunately was just in time to see it pop down a\n",
+            "large rabbit-hole under the hedge.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "txt= \"\"\"\n",
+        "Alice was beginning to get very tired of sitting by her sister on the\n",
+        "bank, and of having nothing to do: once or twice she had peeped into\n",
+        "the book her sister was reading, but it had no pictures or\n",
+        "conversations in it, “and what is the use of a book,” thought Alice\n",
+        "“without pictures or conversations?”\n",
+        "\n",
+        "So she was considering in her own mind (as well as she could, for the\n",
+        "hot day made her feel very sleepy and stupid), whether the pleasure of\n",
+        "making a daisy-chain would be worth the trouble of getting up and\n",
+        "picking the daisies, when suddenly a White Rabbit with pink eyes ran\n",
+        "close by her.\n",
+        "\n",
+        "There was nothing so very remarkable in that; nor did Alice think it\n",
+        "so _very_ much out of the way to hear the Rabbit say to itself, “Oh\n",
+        "dear! Oh dear! I shall be late!” (when she thought it over afterwards,\n",
+        "it occurred to her that she ought to have wondered at this, but at the\n",
+        "time it all seemed quite natural); but when the Rabbit actually took a\n",
+        "watch out of its waistcoat-pocket, and looked at it, and then hurried\n",
+        "on, Alice started to her feet, for it flashed across her mind that she\n",
+        "had never before seen a rabbit with either a waistcoat-pocket, or a\n",
+        "watch to take out of it, and burning with curiosity, she ran across the\n",
+        "field after it, and fortunately was just in time to see it pop down a\n",
+        "large rabbit-hole under the hedge.\n",
+        "\"\"\"\n",
+        "\n",
+        "print(txt)\n",
+        "print('\\n')\n",
+        "\n",
+        "test = '''\n",
+        "Alice was beginning to get very tired of sitting by her sister on the\n",
+        "bank, and of having nothing to do: once or twice she had peeped into\n",
+        "the book her sister was reading, but it had no pictures or\n",
+        "conversations in it, “and what is the use of a book,” thought Alice\n",
+        "“without pictures or conversations?”\n",
+        "\n",
+        "So she was considering in her own mind (as well as she could, for the\n",
+        "hot day made her feel very sleepy and stupid), whether the pleasure of\n",
+        "making a daisy-chain would be worth the trouble of getting up and\n",
+        "picking the daisies, when suddenly a White Rabbit with pink eyes ran\n",
+        "close by her.\n",
+        "\n",
+        "There was nothing so very remarkable in that; nor did Alice think it\n",
+        "so _very_ much out of the way to hear the Rabbit say to itself, “Oh\n",
+        "dear! Oh dear! I shall be late!” (when she thought it over afterwards,\n",
+        "it occurred to her that she ought to have wondered at this, but at the\n",
+        "time it all seemed quite natural); but when the Rabbit actually took a\n",
+        "watch out of its waistcoat-pocket, and looked at it, and then hurried\n",
+        "on, Alice started to her feet, for it flashed across her mind that she\n",
+        "had never before seen a rabbit with either a waistcoat-pocket, or a\n",
+        "watch to take out of it, and burning with curiosity, she ran across the\n",
+        "field after it, and fortunately was just in time to see it pop down a\n",
+        "large rabbit-hole under the hedge.\n",
+        "'''\n",
+        "print(test)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Iw_AezHSFo4-",
+        "outputId": "de4b14b6-336f-482d-9c68-c591c76751c5"
       },
       "execution_count": null,
       "outputs": [
